# Hiita

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  nuxtjs.yml
ai/: Dockerfile
ai/data/: gpt_response.json
ai/scripts/: prompt.txt  sys_prompt.txt
ai/src/: api_test.py  main.py  ocr.py  read_utils.py
backend/: .gitignore  build.gradle  docker-compose.yaml  settings.gradle
backend/src/main/java/ponyagons/hiita/repository/entities/: CategoryFortune.java  CategoryFortuneExample.java  CategoryFortuneKey.java  CategoryFortuneWithBLOBs.java  Omikuji.java  OmikujiExample.java  Shrine.java  ShrineExample.java  User.java  UserExample.java
backend/src/main/kotlin/ponyagons/hiita/: HiitaApplication.kt
backend/src/main/kotlin/ponyagons/hiita/controller/: LoginController.kt  OmikujiController.kt
backend/src/main/kotlin/ponyagons/hiita/domain/: User.kt
backend/src/main/kotlin/ponyagons/hiita/repository/: UserRepository.kt
backend/src/main/kotlin/ponyagons/hiita/service/: UserService.kt
backend/src/main/resources/: application.yaml  generatorConfig.xml
backend/src/main/resources/db/migration/: V1_0_0__create_user.sql  V1_1_0__create_shrine.sql  V1_2_0__create_omikuji.sql  V1_3_0__create_category_fortune.sql
backend/src/test/kotlin/ponyagons/hiita/: HiitaApplicationTests.kt
front/hiita/: app.vue  nuxt.config.ts  package-lock.json  package.json
front/hiita/components/: footer.vue  header.vue
front/hiita/pages/: add.vue  history.vue  index.vue
front/hiita/pages/detail/: [id].vue
front/hiita/plugins/: vuetify.ts
(+13 files in other folders)
